@@ -212,7 +212,7 @@
 										<span id="now_playing_info_artist"></span>
 										<!-- span id="now_playing_info_album"></span -->
 									</div>
-			 						<img src="imgs/logo_deezer.png" id="cover"/>
+			 						<img src="imgs/unknown_cd.png" id="cover"/>
 								</div>
 							</div>
 						</div>
